--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 								</div>
 								<div>
 									<h3 class="mb-4">Email Address</h3>
-									<p><a href="">hadibutt476@gmail.com</a></p>
+									<p><a href="mailto: hadibutt476@gmail.com">hadibutt476@gmail.com</a></p>
 								</div>
 							</div>
 						</div>
