--- a/index.html
+++ b/index.html
@@ -200,6 +200,27 @@
                                         3. DNS Handling & Deploying the poject to cloud platforms. </p>
 		    				</div>
 	    				</div>
+						  
+				<div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">September 2021 - Present</span>
+		    					<h2>Technical Lead</h2>
+		    					<span class="position">Google Developer Student Club NUML</span>
+		    					<p>Job Description includes: <br>
+									1. Conducting workshops or meetups related to computer programming. <br>
+									2. Determining project requirements and developing work schedules for the team. <br>
+									3. Explain new projects to team members and troubleshoot any problems that occurs. </p>
+		    				</div>
+	    				</div>
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+			
+						  
                         <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
