--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 									2. Managing the Website and Debugging all the errors faced by clients. </p>
 		    				</div>
 	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
+<!-- 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
@@ -247,7 +247,7 @@
 										2. Sketching Logos, Graphic designs & Favourite Icons. <br>
 									  3. Developing the website to work for the users and clients. <br> </p>
 		    				</div>
-	    				</div>
+	    				</div> -->
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
