--- a/index.html
+++ b/index.html
@@ -186,13 +186,29 @@
 					  </div>
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
+						  
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">Feburary 2021 - Present</span>
+		    					<span class="date">April 2022 - Present</span>
 		    					<h2>Laravel Developer</h2>
+		    					<span class="position">RippleBerry</span>
+		    					<p>Job Description includes: <br>
+										1. Develop ERP/CRP Management Sytems etc. <br>
+									    2. Design & Integrate Relational Database Schemas accordingly. <br>
+                                        3. DNS Handling & Deploying the poject to cloud platforms. </p>
+		    				</div>
+	    				</div>
+						    
+					    <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">Feburary 2021 - Apil 2022</span>
+		    					<h2>Associate Laravel Developer</h2>
 		    					<span class="position">SBITSERVICES</span>
 		    					<p>Job Description includes: <br>
 										1. Developing & Integrating new modules to an existing project. <br>
