--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/hadi.jpg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/hadi1.jpeg);">
 	    				</div>
     				</div>
     			</div>
